--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -32,6 +32,10 @@
     position: absolute;
     bottom: 20px;
     right: 5rem;
+
+    @include respond(450) {
+        right: 2rem;
+    }
 }
 
 .text {
