--- a/components/header/Nav.module.scss
+++ b/components/header/Nav.module.scss
@@ -28,3 +28,11 @@
         }
     }
 }
+
+@include respond(mobile) {
+    .nav {
+        ul {
+            flex-direction: column;
+        }
+    }
+}
