--- a/components/social/SocialIcons.module.scss
+++ b/components/social/SocialIcons.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
 .icons {
     display: flex;
     gap: 10px;
@@ -11,5 +12,9 @@
         &:hover {
             transform: scale(1.1);
         }
+    }
+
+    @include respond(450) {
+        display: none;
     }
 }
