--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -28,6 +28,12 @@
     }
 }
 
+@include respond(mobile) {
+    .hat {
+        display: none;
+    }
+}
+
 .icons {
     position: absolute;
     bottom: 20px;
@@ -40,6 +46,8 @@
     align-items: center;
     gap: 1rem;
     text-align: center;
+    width: 100vw;
+    position: absolute;
 
     & > * {
         color: $text-color-primary;
