--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -23,6 +23,7 @@ h1 {
     font-size: 5rem;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
+    padding: 2rem 0;
 }
 h2 {
     font-size: 5rem;
