--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -30,7 +30,9 @@
 
 @include respond(mobile) {
     .hat {
-        display: none;
+        & > * {
+            display: none;
+        }
     }
 }
 
