--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -25,6 +25,12 @@ h1 {
     font-weight: 700;
     padding: 2rem 0;
 }
+
+@include respond(mobile) {
+    h1 {
+        font-size: 3rem;
+    }
+}
 h2 {
     font-size: 5rem;
     font-family: "Raleway", sans-serif;
