--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -42,6 +42,13 @@
     right: 5rem;
 }
 
+@include respond(450) {
+    .icons {
+        right: 2rem;
+        bottom: 10rem;
+    }
+}
+
 .text {
     display: flex;
     flex-direction: column;
