--- a/components/header/SecondaryNav.module.scss
+++ b/components/header/SecondaryNav.module.scss
@@ -17,6 +17,11 @@
         flex-direction: column;
         gap: 2rem;
 
+        @include respond(450) {
+            gap: 4rem;
+            font-size: 2rem;
+        }
+
         li {
             cursor: pointer;
 
