--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -1,5 +1,6 @@
 @import "../../styles/variables.scss";
 @import "../../styles/mixins.scss";
+@import "../../styles/animations.scss";
 .header {
     background-color: rgba(0, 0, 0, 0.616);
     height: 100vh;
@@ -55,6 +56,7 @@
     align-items: center;
     gap: 1rem;
     text-align: center;
+    opacity: 0;
 
     & > * {
         color: $text-color-primary;
@@ -66,6 +68,14 @@
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.home-open-text {
+    animation: fadeIn 0.6s ease-out 0.5s forwards;
+}
+
+.home-closed-text {
+    animation: fadeOut 0.1s ease-out backwards;
 }
 
 .img {
