--- a/styles/animations.scss
+++ b/styles/animations.scss
@@ -37,3 +37,23 @@
         flex-basis: 30%;
     }
 }
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
