--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -58,17 +58,14 @@ div {
     color: $text-color-secondary;
 }
 
+li,
+a,
 button {
+    color: $text-color-primary;
     font-family: "Raleway", sans-serif;
     font-size: 1.5rem;
 }
 
 button {
-    font-weight: 700;
-    color: $text-color-secondary;
-}
-
-li,
-a {
-    color: $text-color-primary;
+    cursor: pointer;
 }
