--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -98,5 +98,17 @@ section {
     animation: mainHomeClosed 0.1s ease-out backwards;
 }
 
+@include respond(mobile) {
+    .header-not-home {
+        flex-basis: 30%;
+        animation: headerHomeClosed 0.3s ease-out 0.2s backwards;
+    }
+
+    .main-not-home {
+        flex-basis: 70%;
+        animation: mainHomeClosed 0.3s ease-out 0.2s backwards;
+    }
+}
+
 .bg-img {
 }
